force-app/main/default/objects/trailheadapp__User_Badge__c/fields/trailheadapp__Assigned_Date__c.field-meta.xml
<CustomField>
    <fullName>trailheadapp__Assigned_Date__c</fullName>
    <inlineHelpText>Representa la fecha en la que se asigna la insignia con el propósito de realizar el seguimiento de la actividad de un usuario antes de que empiece a trabajar en ello.</inlineHelpText>
    <label>Assigned On Date</label>
    <type>DateTime</type>
</CustomField>