force-app/main/default/objects/trailheadapp__User_Badge__c/fields/trailheadapp__Assigned_to_Complete__c.field-meta.xml
<CustomField>
    <fullName>trailheadapp__Assigned_to_Complete__c</fullName>
    <description>If assigned date is not null, use the difference between assigned date and finished date. If assigned date is null, use the difference between first attempted date and finished date. If finished date is null, don&apos;t show anything.</description>
    <formula>IF(ISNULL(trailheadapp__Assigned_Date__c),trailheadapp__Finished_Date__c - trailheadapp__First_Attempted_Date__c , trailheadapp__Finished_Date__c - trailheadapp__Assigned_Date__c  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>El espacio de tiempo que se empleó en completar desde que se asignó por primera vez se intentó por primera vez si no se asignó.</inlineHelpText>
    <label>Duration to Complete (Days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>