force-app/main/default/objects/trailheadapp__User_Badge__c/fields/trailheadapp__Due_Date__c.field-meta.xml
<CustomField>
    <fullName>trailheadapp__Due_Date__c</fullName>
    <inlineHelpText>Representa la fecha en que la insignia vence con el propósito de realizar el seguimiento del tiempo restante para que un usuario complete la insignia.</inlineHelpText>
    <label>Due Date</label>
    <type>DateTime</type>
</CustomField>